2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/tlcs90/t90regs.s,
	  device/lib/tlcs90/crt0.s:
	  crt0 for tlcs90.

2013-12-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/peep.c:
	  Fix bug #2182.
	* src/SDCCralloc.hpp:
	  Enable warning for non-connected live ranges for hc08 and s08.

2013-12-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c: Fix cost for built-in strncpy().

2013-12-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (glue): fixed bug 2212
	* src/z80/gen.c (genBuiltInStrncpy): fixed bug 2231
	* support/regression/tests/bug-2231.c: new, added

2013-12-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (newiTempOperand): fixed bug 2235
	* support/regression/tests/bug-2235.c: new, added
	* src/SDCCptropt.c (ptrPseudoSymSafe): fixed bug 2216
	* support/regression/tests/bug-2216.c: new, added

2013-12-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version, doc/sdccman.lyx: bumped version to 3.3.2
	* src/SDCCast.c (decorateType, NOT): fixed bug 2232
	* src/SDCCmain.c (printVersionInfo): mention GPL
	* support/regression/tests/bool.c: fixed warning

2013-12-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (outBitC, genIfx): fixed both parts of bug 2233
	* support/regression/tests/bool.c: added test

2013-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix handling of IY during accesses to global variables.

2013-11-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix use flag initialization in lospre edge splitting.
	* src/SDCCglue.c:
	  Add comment on bug #2089 that allocates strings twice.

2013-11-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_divulong.c: cosmetic, use y0
	* device/lib/_fsadd.c: cosmetic
	* device/lib/clean.mk: clean pic14 and tlcs90
	* device/lib/ds390/tinibios.c (_sdcc_external_startup): do not change stack